@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT(sblim-sfcc, 1.99.preview1, sblim-devel@lists.sourceforge.net)
+AC_INIT(sblim-sfcc, 1.99.preview2, sblim-devel@lists.sourceforge.net)
 AC_CONFIG_SRCDIR([cimc/cimcclient.c])
 AC_CONFIG_HEADER([config.h])
 
