@@ -10,6 +10,7 @@ New Features
 - 1654163: Restructure for pluggable backends
 - 1654428: Removed obsolete libsfcUtil
 - 1663663: Supplied spec file for RPM build
+- 1681555: Add backend selection via scheme parameter
 
 Bugs:
 - 1670019: Fixed connection failures on second parallel connection
